fixes cover photo spacing for blog posts

--- a/css/main.less
+++ b/css/main.less
@@ -778,7 +778,7 @@ td, th {
 
     .page-cover {
         margin-bottom: 9rem;
-        margin-top: -2.8rem;
+        margin-top: 0rem;
     }
 
 .blog {
@@ -848,6 +848,7 @@ td, th {
     height: 0;
     overflow: hidden;
     width: 100%;
+    margin-top: 2.25rem;
     margin-bottom: 3rem;
 }
 
